# ikos

./: .gitignore  .gitmodules  Makefile  README.md  boot.ik  config.ik
.github/: FUNDING.yml
.github/workflows/: docs.yml
arch/: cpu.ik  timer.ik
docs/: .gitignore  Makefile  README.md  requirements.txt
docs/source/: conf.py  glossary.rst  index.rst
docs/source/_ext/: ikdomain.py
docs/source/_static/: custom.css
docs/source/guide/: building.rst  filesystem.rst  index.rst  processes.rst  scripting.rst  shell.rst
docs/source/internals/: boot.rst  cpu.rst  drivers.rst  filesystem.rst  index.rst  memory.rst  scheduler.rst
docs/source/reference/: commands.rst  config.rst  examples.rst  index.rst
drivers/: bus.ik  serial.ik
fs/: block.ik  mount.ik  treefs.ik
kernel/: memory.ik  sched.ik  syscall.ik
shell/: commands.ik  script.ik  shell.ik
test/: Cargo.toml  Makefile  harness.rs
tests/: 01_intro.rhai  02_fs.rhai  03_io.rhai  04_mount.rhai  05_scripts.rhai  06_errors.rhai  07_fs_edge.rhai  08_cmd_edge.rhai  shell.rhai
