# Standalone end-to-end test harness for ik-os. It reuses the existing crates
# instead of re-implementing anything:
#   * ik8bvm  — the AVR simulator (same VM the IDE runs)
#   * ikide   — the IDE's library face, for build_vm + the Rhai device loader
#               (ScriptedDevice / DeviceBus / SharedBus) and assets/devices/*.rhai
#
#   cd ik-os/test
#   cargo run --release -- ../build/boot.hex
[package]
name = "ik-os-test"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "ik-os-test"
path = "harness.rs"

[dependencies]
# Both come from the vendored submodule at tools/ikide.
ik8bvm = { path = "../tools/ikide/tools/ik8b/tools/ik8bvm" }
ikide = { path = "../tools/ikide" }

[profile.release]
opt-level = 3
